fixed: deleted a gap repetition on .fruits

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -16,10 +16,9 @@ img {
 
 .fruits {
   display: flex;
-  gap: 20px;
+  gap: 52px;
   justify-content: center;
   text-align: center;
-  gap: 52px;
 }
 
 /* do not edit this footer */
